--- a/css-blog/index.html
+++ b/css-blog/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/font/flaticon.css">
   <title>Mi blog</title>
 </head>
 
@@ -13,22 +14,32 @@
   <header>
     <section class="header-icons-container">
       <div class="icons">
-        <a href="/">Facebook</a>
-        <a href="/">Twitter</a>
-        <a href="/">Instagram</a>
-        <a href="/">LinkedIn</a>
-        <a href="/">Youtube</a>
+        <a href="/" ><span class="flaticon-001-facebook"></span></a>
+        <a href="/" ><span class="flaticon-002-twitter"></span></a>
+        <a href="/" ><span class="flaticon-011-instagram"></span></a>
+        <a href="/" ><span class="flaticon-010-linkedin"></span></a>
+        <a href="/" ><span class="flaticon-008-youtube"></span></a>
       </div>
     </section>
     <nav>
       <section class="nav-logo-container">
-        <a href="">logo</a>
+        <a href="">
+          <img src="./assets/img/Logo-negro.png" alt="Logo de mi blog">
+        </a>
       </section>
       <section class="profile-link">
         <a href="./perfil.html">Sobre mí</a>
       </section>
     </nav>
   </header>
+  <main class="home-main">
+    <section>
+      <p class="home-main-text">Conoce las novedades y noticias del Mundo Tech</p>
+      <button class="home-main-button">
+        <a href="./blogs.html">Entra ya!</a>
+      </button>
+    </section>
+  </main>
 </body>
 
 </html>
